# playwright-service

./: .coverage  .dockerignore  .gitignore  Dockerfile  Dockerfile.playwright  Makefile  README.md  README_CN.md  alembic.ini  base_proxy.py  config.py  docker-compose.prod.yml  docker-compose.yml  encoding_utils.py  get_error.py  gunicorn.config.py  main.py  makefile  playwright.config.json  pyproject.toml  pytest.ini  run_tests.py  tmp.md  utils.py
.github/workflows/: README.md  release.yml  setup-branch-protection.yml
alembic/: env.py
alembic/versions/: 3d0a2a346b3c_init.py  8e21b4c1a7a1_add_auth_config.py
apis/: __init__.py  auth_utils.py  deps.py  enhanced_router.py  management_router.py  mcp_router.py  metrics.py  service_router.py  utils.py
browsers/: __init__.py  base_browser.py  browser_factory.py  browser_manager.py  browser_scripts.py  browser_utils.py  chrome_browser.py  firefox_browser.py  webkit_browser.py
docs-pub/: 迁移到_fastmcp_3.0_a9c4bf1b.plan.md
models/: __init__.py  auth_config_model.py  request_history_model.py
schemas/: __init__.py  enhanced_schema.py  management_schema.py  service_schema.py
scripts/: setup-branch-protection.sh  start_service.sh
tests/: README.md  conftest.py  test_browser_resource_cleanup.py  test_clean_html.py  test_encoding_utils.py  test_main_mcp.py  test_service_router.py  test_utils.py
utils/: __init__.py  html_utils.py  loggers.py  middleware.py
